--- a/css/styles.css
+++ b/css/styles.css
@@ -242,38 +242,7 @@ li.option.selected {
 	outline: none;
 }
 
-select {
-	width: 80px;
-	margin-top: 3px;
-	margin-right: 25px;
-	margin-bottom: 10px;
-	padding: 1px 3px;
-	height: 22px;
-	font-size: 1em;
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 700;
-	color: #00008B;
-	border: 1px solid #EEEEEE;
-	border-radius: 3px;
-	box-shadow: 0 0 2px #9999FF;
-}
 
-option {
-	padding: 1px 3px 1px 3px;
-	color: #000;
-	font-weight: 400;
-	text-align: left;
-}
-
-option[default] {
-	display: none;
-}
-
-/*.select_scurt {*/
-/*width: 80px;*/
-/*margin-bottom: 10px;*/
-/*margin-top: 3px;*/
-/*}*/
 
 .persoana td, .persoana tr {
 	border: none;
@@ -287,12 +256,40 @@ input[type="text"] {
 	border-radius: 3px;
 	box-shadow: 0 0 2px #99F;
 	margin-right: 23px;
-}
-input.normal {
 	border: 1px solid #eee;
 }
+.required {
+	color: #E00;
+}
+
 input:focus {
 	background-color: #F1F2D0;
+}
+
+
+select {
+	padding: 1px 3px;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 700;
+	font-size: 1em;
+	border-radius: 3px;
+	box-shadow: 0 0 2px #9999FF;
+	margin-right: 23px;
+
+	width: 80px;
+	height: 22px;
+	border: 1px solid #EEE;
+}
+
+option {
+	padding: 1px 3px 1px 3px;
+	color: #000;
+	font-weight: 400;
+	text-align: left;
+}
+
+option[default] {
+	display: none;
 }
 
 .lung {
@@ -317,7 +314,7 @@ label {
 table {
 	/*display: block;*/
 	margin-top: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 15px;
 	border-collapse: collapse;
 	/*border-spacing: 1px;*/
 	/*height: 200px;*/
@@ -327,7 +324,7 @@ table {
 
 td {
 	vertical-align: top;
-	padding-top: 5px;
+	padding-top: 7px;
 }
 
 .rezultate td, .rezultate th {
@@ -455,12 +452,6 @@ td {
 	color: #000;
 	background-color: #777;
 	padding: 0 4px;
-}
-
-
-.required {
-	border: 1px solid #F44;
-	color: #E00;
 }
 
 .error {
