--- a/css/styles.css
+++ b/css/styles.css
@@ -1,235 +1,245 @@
 /*@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300&subset=latin,latin-ext);*/
 @font-face {
-	font-family: 'Roboto Condensed';
-	font-style: normal;
-	font-weight: 300;
-	src: url('../fonts/roboto/RobotoCondensed-Light.woff') format('woff'), url('../fonts/roboto/RobotoCondensed-Light.eot') format('embedded-opentype');
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/roboto/RobotoCondensed-Light.woff') format('woff'), url('../fonts/roboto/RobotoCondensed-Light.eot') format('embedded-opentype');
 }
 
 @font-face {
-	font-family: 'Roboto Condensed';
-	font-style: normal;
-	font-weight: 400;
-	src: url('../fonts/roboto/RobotoCondensed-Regular.woff') format('woff'), url('../fonts/roboto/RobotoCondensed-Regular.eot') format('embedded-opentype');
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/roboto/RobotoCondensed-Regular.woff') format('woff'), url('../fonts/roboto/RobotoCondensed-Regular.eot') format('embedded-opentype');
 }
 
 @font-face {
-	font-family: 'Roboto Condensed';
-	font-style: normal;
-	font-weight: 700;
-	src: url('../fonts/roboto/RobotoCondensed-Bold.woff') format('woff'), url('../fonts/roboto/RobotoCondensed-Bold.eot') format('embedded-opentype');
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/roboto/RobotoCondensed-Bold.woff') format('woff'), url('../fonts/roboto/RobotoCondensed-Bold.eot') format('embedded-opentype');
 }
 
 @font-face {
-	font-family: 'Sosa';
-	font-style: normal;
-	font-weight: normal;
-	src: url('../fonts/sosa/sosa-regular-webfont.eot');
-	src: url('../fonts/sosa/sosa-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sosa/sosa-regular-webfont.woff') format('woff'), url('../fonts/sosa/sosa-regular-webfont.ttf') format('truetype'), url('../fonts/sosa/sosa-regular-webfont.svg#sosaregular') format('svg');
+    font-family: 'Sosa';
+    font-style: normal;
+    font-weight: normal;
+    src: url('../fonts/sosa/sosa-regular-webfont.eot');
+    src: url('../fonts/sosa/sosa-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sosa/sosa-regular-webfont.woff') format('woff'), url('../fonts/sosa/sosa-regular-webfont.ttf') format('truetype'), url('../fonts/sosa/sosa-regular-webfont.svg#sosaregular') format('svg');
 }
 
 * {
-	margin: 0;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 li, header, footer {
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 html {
-	min-width: 940px;
+    min-width: 940px;
 }
 
 body {
-	font-size: 62.5%;
-	margin-top: 50px;
-	margin-bottom: 50px;
-	background: #333;
-	overflow-y: hidden;
+    font-size: 62.5%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    background: #333;
+    overflow-y: hidden;
+}
+
+.sosa_font {
+    font-family: 'Sosa', sans-serif;
+    font-size: 1em;
+    color: #000;
 }
 
 .sosa {
-	position: relative;
-	top: -1px;
-	font-family: 'Sosa', sans-serif;
-	font-size: 1.25em;
-	color: floralwhite;
-	text-align: center;
-	padding-left: 5px;
+    position: relative;
+    top: -1px;
+    font-family: 'Sosa', sans-serif;
+    font-size: 1.25em;
+    color: floralwhite;
+    text-align: center;
+    padding-left: 5px;
 }
 
 h1 {
-	/*display: inline;*/
-	border-bottom: 1px solid #777;
-	/*margin-left: 6px;*/
-	margin-bottom: 10px;
+    /*display: inline;*/
+    border-bottom: 1px solid #777;
+    /*margin-left: 6px;*/
+    margin-bottom: 10px;
 }
 
 h2 {
-	/*padding-top: 10px;*/
-	border-bottom: 1px solid #777;
-	margin-bottom: 5px;
+    /*padding-top: 10px;*/
+    border-bottom: 1px solid #777;
+    margin-bottom: 5px;
 }
 
 h3 {
-	font-weight: 400;
-	padding-top: 2px;
-	padding-bottom: 3px;
+    font-weight: 400;
+    padding-top: 2px;
+    padding-bottom: 3px;
 }
 
 header {
-	position: absolute;
-	top: 0;
-	height: 100px;
-	width: 100%;
-	background: #444;
-	font-size: 2em;
-	/*z-index: 2;*/
-	padding: 15px;
-	color: white;
-	border-bottom: 1px solid #CCC;
+    position: absolute;
+    top: 0;
+    height: 100px;
+    width: 100%;
+    background: #444;
+    font-size: 2em;
+    /*z-index: 2;*/
+    padding: 15px;
+    color: white;
+    border-bottom: 1px solid #CCC;
 }
 
 footer {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	height: 50px;
-	width: 100%;
-	background-color: #444;
-	font-size: 2em;
-	padding: 10px 0 10px 15px;
-	color: white;
-	border-top: 1px solid #CCC;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 50px;
+    width: 100%;
+    background-color: #444;
+    font-size: 2em;
+    padding: 10px 0 10px 15px;
+    color: white;
+    border-top: 1px solid #CCC;
 }
 
 nav {
-	position: absolute;
-	top: 100px;
-	bottom: 50px;
-	left: 0;
-	width: 175px;
-	font-size: 1.4em;
-	background-color: #800000;
-	color: #DDD;
-	border-right: 1px solid #CCC;
-	overflow-y: auto;
-	padding-top: 5px;
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 400;
+    position: absolute;
+    top: 100px;
+    bottom: 50px;
+    left: 0;
+    width: 175px;
+    font-size: 1.4em;
+    background-color: #800000;
+    color: #DDD;
+    border-right: 1px solid #CCC;
+    overflow-y: auto;
+    padding-top: 5px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
 }
 
 a {
-	color: white;
-	text-decoration: none;
-	font-size: 0.9em;
+    color: white;
+    text-decoration: none;
+    font-size: 0.9em;
 }
 
 a.submit {
-	display: inline-block;
-	background-color: #488FE0;
-	box-shadow: 0 0 0 0 #488FE0;
-	padding: 0 10px;
-	margin-right: 10px;
-	border-radius: 5px;
+    display: inline-block;
+    background-color: #488FE0;
+    box-shadow: 0 0 0 0 #488FE0;
+    padding: 0 10px;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+
+a.submit:not(.nou) {
     margin-top: 20px;
 }
 
+
 a.submit:hover {
-	box-shadow: 0 0 1px 1px #488FE0;
+    box-shadow: 0 0 1px 1px #488FE0;
 }
 
 a.buton_stergere {
-	display: inline-block;
-	background-color: #900;
-	box-shadow: 0 0 0 0 #900;
-	padding: 0 10px;
+    display: inline-block;
+    background-color: #900;
+    box-shadow: 0 0 0 0 #900;
+    padding: 0 10px;
     margin-top: 20px;
-	margin-right: 10px;
-	border-radius: 5px;
+    margin-right: 10px;
+    border-radius: 5px;
 }
 
 a.buton_stergere:hover {
-	box-shadow: 0 0 1px 1px #900;
+    box-shadow: 0 0 1px 1px #900;
 }
 
 a.buton_renunta {
-	display: inline-block;
-	background-color: #555;
-	box-shadow: 0 0 0 0 #555;
-	padding: 0 10px;
+    display: inline-block;
+    background-color: #555;
+    box-shadow: 0 0 0 0 #555;
+    padding: 0 10px;
     margin-top: 20px;
-	margin-right: 10px;
-	border-radius: 5px;
+    margin-right: 10px;
+    border-radius: 5px;
 }
 
 a.buton_renunta:hover {
-	box-shadow: 0 0 1px 1px #555;
+    box-shadow: 0 0 1px 1px #555;
 }
 
 li {
-	list-style-type: none;
-	z-index: 1;
-	cursor: default;
+    list-style-type: none;
+    z-index: 1;
+    cursor: default;
 }
 
 li.menu {
-	padding: 5px 5px 5px 15px;
-	border-top: 1px solid #800000;
+    padding: 5px 5px 5px 15px;
+    border-top: 1px solid #800000;
 }
 
 li.option {
-	display: none;
-	padding: 5px 5px 5px 30px;
-	background-color: #600000;
+    display: none;
+    padding: 5px 5px 5px 30px;
+    background-color: #600000;
 }
 
 li:hover:not(.selected), li.selected {
-	/*background-color: #922;*/
-	/*box-shadow: inset 0px 0px 1px #FFF;*/
-	color: #FFF;
-	/*text-shadow: #333 1px 1px 2px;*/
+    /*background-color: #922;*/
+    /*box-shadow: inset 0px 0px 1px #FFF;*/
+    color: #FFF;
+    /*text-shadow: #333 1px 1px 2px;*/
 }
 
 li.menu.selected {
-	border-top: 1px solid #C00;
-	border-bottom: 1px solid #530000;
-	background-color: #900;
-	color: #FFF;
+    border-top: 1px solid #C00;
+    border-bottom: 1px solid #530000;
+    background-color: #900;
+    color: #FFF;
 }
 
 li.menu.selected + ul li:last-child {
-	border-bottom: 1px solid #C00;
+    border-bottom: 1px solid #C00;
 }
 
 li.option.selected {
-	background-color: #422;
-	color: #FFF;
+    background-color: #422;
+    color: #FFF;
 }
 
 .box {
-	display: none;
-	position: absolute;
-	top: 100px;
-	bottom: 50px;
-	left: 175px;
-	right: 0;
-	font-size: 1.3em;
-	overflow-y: auto;
-	padding: 10px 15px;
-	/*border-right: 1px solid #FFF;*/
-	color: #FFF;
-	font-family: 'Roboto Condensed', sans-serif;
-	background-color: #333;
+    display: none;
+    position: absolute;
+    top: 100px;
+    bottom: 50px;
+    left: 175px;
+    right: 0;
+    font-size: 1.3em;
+    overflow-y: auto;
+    padding: 10px 15px;
+    /*border-right: 1px solid #FFF;*/
+    color: #FFF;
+    font-family: 'Roboto Condensed', sans-serif;
+    background-color: #333;
 }
 
 /*#logo {*/
@@ -242,109 +252,107 @@ li.option.selected {
 /*}*/
 
 :focus {
-	outline: none;
+    outline: none;
 }
 
-
-
 .persoana td, .persoana tr {
-	border: none;
+    border: none;
 }
 
 input[type="text"] {
-	padding: 1px 3px 1px 3px;
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 700;
-	font-size: 1em;
-	border-radius: 3px;
-	box-shadow: 0 0 2px #99F;
-	margin-right: 30px;
-	border: 1px solid #eee;
+    padding: 1px 3px 1px 3px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 700;
+    font-size: 1em;
+    border-radius: 3px;
+    box-shadow: 0 0 2px #99F;
+    margin-right: 30px;
+    border: 1px solid #eee;
 }
+
 .required {
-	color: #E00;
+    color: #E00;
 }
 
 input:focus {
-	background-color: #F1F2D0;
+    background-color: #F1F2D0;
 }
 
-
 select {
-	padding: 1px 3px;
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 700;
-	font-size: 1em;
-	border-radius: 3px;
-	box-shadow: 0 0 2px #9999FF;
-	margin-right: 23px;
+    padding: 1px 3px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 700;
+    font-size: 1em;
+    border-radius: 3px;
+    box-shadow: 0 0 2px #9999FF;
+    margin-right: 23px;
 
-	width: 80px;
-	height: 22px;
-	border: 1px solid #EEE;
+    width: 80px;
+    height: 22px;
+    border: 1px solid #EEE;
 }
 
 option {
-	padding: 1px 3px 1px 3px;
-	color: #000;
-	font-weight: 400;
-	text-align: left;
+    padding: 1px 3px 1px 3px;
+    color: #000;
+    font-weight: 400;
+    text-align: left;
 }
 
 option[default] {
-	display: none;
+    display: none;
 }
 
 .lung {
-	width: 250px;
+    width: 250px;
 }
 
 .mediu {
-	width: 200px;
+    width: 200px;
 }
 
 .scurt {
-	width: 150px;
+    width: 150px;
 }
 
 label {
-	display: block;
-	font-weight: 400;
-	font-size: 1.05em;
-	padding-bottom: 3px;
+    display: block;
+    font-weight: 400;
+    font-size: 1.05em;
+    padding-bottom: 3px;
 }
 
 table {
-	/*display: block;*/
-	margin-top: 10px;
-	border-collapse: collapse;
-	/*border-spacing: 1px;*/
-	/*height: 200px;*/
-	/*overflow-y: auto;*/
+    /*display: block;*/
+    margin-top: 10px;
+    border-collapse: collapse;
+    /*border-spacing: 1px;*/
+    /*height: 200px;*/
+    /*overflow-y: auto;*/
 
 }
 
 td {
-	vertical-align: top;
-	padding-top: 7px;
+    vertical-align: top;
+    padding-top: 7px;
 }
 
 .rezultate td, .rezultate th {
-	padding: 1px 5px;
-	text-align: left;
-	border: 1px solid #777;
-	vertical-align: top;
+    padding: 1px 5px;
+    text-align: left;
+    border: 1px solid #777;
+    vertical-align: top;
 }
 
 .rezultate th {
-	background-color: #600000; /* culoare cap tabel */
-	color: #FFD5D5;
-	font-weight: 400;
-	font-size: 1.1em;
+    background-color: #600000; /* culoare cap tabel */
+    color: #FFD5D5;
+    font-weight: 400;
+    font-size: 1.1em;
 }
 
 .rezultate tr:nth-child(2n) td {
-	background-color: #424242;
+    background-color: #424242;
 }
 
 /*.edit-line {*/
@@ -354,162 +362,162 @@ td {
 /*}*/
 
 .produse .cod {
-	min-width: 200px;
-	font-weight: 400;
-	color: #FF0;
-	font-size: 1em;
+    min-width: 200px;
+    font-weight: 400;
+    color: #FF0;
+    font-size: 1em;
 }
 
 .id {
-	color: #AAA;
+    color: #AAA;
 }
 
 .companie {
-	color: #BFED62;
+    color: #BFED62;
 }
 
 .nume {
-	color: #AABBFF;
+    color: #AABBFF;
 }
 
 .persoane .email {
-	font-size: 1em;
-	color: #EFF1CC;
+    font-size: 1em;
+    color: #EFF1CC;
 }
 
 #overlay {
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	position: absolute;
-	background-color: #888;
-	opacity: 0.5;
-	display: none;
-	z-index: 1000;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    background-color: #888;
+    opacity: 0.5;
+    display: none;
+    z-index: 1000;
 }
 
 #confirmare {
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
-	display: none;
-	position: absolute;
-	width: 250px;
-	height: 100px;
-	line-height: 100px;
-	border-radius: 10px;
-	font-size: 2em;
-	font-family: "Roboto Condensed", sans-serif;
-	color: #000;
-	background-color: #fff;
-	box-shadow: 2px 2px 5px #222;
-	text-align: center;
-	border: 1px solid #eee;
-	z-index: 1000;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    display: none;
+    position: absolute;
+    width: 250px;
+    height: 100px;
+    line-height: 100px;
+    border-radius: 10px;
+    font-size: 2em;
+    font-family: "Roboto Condensed", sans-serif;
+    color: #000;
+    background-color: #fff;
+    box-shadow: 2px 2px 5px #222;
+    text-align: center;
+    border: 1px solid #eee;
+    z-index: 1000;
 }
 
 #error {
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
-	display: none;
-	position: absolute;
-	width: 600px;
-	height: 300px;
-	border-radius: 10px;
-	font-size: 1em;
-	font-family: "Roboto Condensed", sans-serif;
-	color: #000;
-	background-color: #fff;
-	box-shadow: 2px 2px 5px #222;
-	text-align: center;
-	border: 1px solid #eee;
-	z-index: 1000;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    display: none;
+    position: absolute;
+    width: 600px;
+    height: 300px;
+    border-radius: 10px;
+    font-size: 1em;
+    font-family: "Roboto Condensed", sans-serif;
+    color: #000;
+    background-color: #fff;
+    box-shadow: 2px 2px 5px #222;
+    text-align: center;
+    border: 1px solid #eee;
+    z-index: 1000;
 }
 
 #c_nume, #c_adresa, #c_oras, #c_tara, #c_prenume {
-	display: none;
-	position: relative;
-	top: 4px;
-	left: -20px;
+    display: none;
+    position: relative;
+    top: 4px;
+    left: -20px;
 }
 
 .disabled {
-	background-color: #444;
-	color: #FFF;
+    background-color: #444;
+    color: #FFF;
 }
 
 .actiune:hover {
-	cursor: pointer;
-	color: #00FF00;
+    cursor: pointer;
+    color: #00FF00;
 }
 
 .total {
-	font-family: 'Roboto Condensed', sans-serif;
-	color: #000;
-	background-color: #777;
-	padding: 0 4px;
+    font-family: 'Roboto Condensed', sans-serif;
+    color: #000;
+    background-color: #777;
+    padding: 0 4px;
 }
 
 .error {
-	/* textele care se afiseaza dupa input */
-	padding-top: 2px;
-	display: block;
-	color: #F44;
+    /* textele care se afiseaza dupa input */
+    padding-top: 2px;
+    display: block;
+    color: #F44;
 }
 
 .tabel {
-	position: absolute;
-	display: none;
-	border: 1px solid #eee;
-	background-color: #fff;
-	border-radius: 3px;
-	box-shadow: 1px 1px 2px #777;
-	/*overflow: hidden;*/
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+    position: absolute;
+    display: none;
+    border: 1px solid #eee;
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 1px 1px 2px #777;
+    /*overflow: hidden;*/
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .tabel > :not(:last-child) {
-	border-bottom: 1px solid #EEE;
-	border-radius: 0;
+    border-bottom: 1px solid #EEE;
+    border-radius: 0;
 }
 
 .tabel > :last-child {
-	border-radius: 0;
+    border-radius: 0;
 }
 
 .rec {
-	margin: 0;
-	padding: 5px;
-	color: #000000;
-	background-color: #ffffff;
-	font-family: 'Roboto Condensed', sans-serif;
-	line-height: 1.1;
-	cursor: default;
+    margin: 0;
+    padding: 5px;
+    color: #000000;
+    background-color: #ffffff;
+    font-family: 'Roboto Condensed', sans-serif;
+    line-height: 1.1;
+    cursor: default;
 }
 
 #source {
-	display: none;
+    display: none;
 }
 
 .bold {
-	font-weight: 700;
+    font-weight: 700;
 }
 
 .noresults {
-	padding: 5px;
-	color: #000;
-	background-color: lavender;
+    padding: 5px;
+    color: #000;
+    background-color: lavender;
     line-height: 1.05;
 }
 
@@ -528,18 +536,18 @@ td {
    speak for themselves. Background we set to 80% white with
    our animation centered, and no-repeating */
 .modal {
-	display: none;
-	position: absolute;
-	z-index: 1000;
-	top: 40px;
-	left: 12px;
-	width: 70px;
+    display: none;
+    position: absolute;
+    z-index: 1000;
+    top: 40px;
+    left: 12px;
+    width: 70px;
 
 }
 
 /* Anytime the body has the loading class, our
    modal element will be visible */
 body.loading .modal {
-	display: block;
+    display: block;
 }
 
