--- a/css/styles.css
+++ b/css/styles.css
@@ -149,10 +149,6 @@ a.submit {
     border-radius: 5px;
 }
 
-a.submit:not(.nou) {
-    margin-top: 20px;
-}
-
 
 a.submit:hover {
     box-shadow: 0 0 2px 1px #488FE0;
@@ -186,6 +182,10 @@ a.buton_renunta:hover {
     box-shadow: 0 0 2px 1px #555;
 }
 
+
+.F1 {
+    margin-top: 20px;
+}
 li {
     list-style-type: none;
     z-index: 1;
