--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,6 @@ a.submit {
     border-radius: 5px;
 }
 
-
 a.submit:hover {
     box-shadow: 0 0 2px 1px #488FE0;
 }
@@ -182,10 +181,24 @@ a.buton_renunta:hover {
     box-shadow: 0 0 2px 1px #555;
 }
 
+a.buton_printeaza {
+    display: inline-block;
+    background-color: mediumseagreen;
+    box-shadow: 0 0 0 0 mediumseagreen;
+    padding: 0 10px;
+    margin-top: 20px;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+
+a.buton_printeaza:hover {
+    box-shadow: 0 0 2px 1px mediumseagreen;
+}
 
 .F1 {
     margin-top: 20px;
 }
+
 li {
     list-style-type: none;
     z-index: 1;
@@ -253,10 +266,18 @@ li.option.selected {
 
 :focus {
     outline: none;
+
 }
 
 .persoana td, .persoana tr {
     border: none;
+}
+
+label {
+    display: block;
+    font-weight: 400;
+    font-size: 1.05em;
+    padding-bottom: 3px;
 }
 
 input[type="text"] {
@@ -265,17 +286,38 @@ input[type="text"] {
     font-weight: 700;
     font-size: 1em;
     border-radius: 3px;
+    /*margin-right: 30px;*/
     box-shadow: 0 0 2px #99F;
-    margin-right: 30px;
+
+}
+
+.normal {
     border: 1px solid #eee;
+}
+input.normal:focus {
+    background-color: #F1F2D0;
+}
+
+.valoare_oferta {
+    border: 1px solid mediumseagreen;
+    background-color: mediumseagreen;
+    font-size: 1.2em !important;
+}
+input.valoare_oferta:focus {
+    background-color: darkseagreen;
+    border: 1px solid darkseagreen;
+}
+
+.data_expirare {
+    border: 1px solid #778899;
+    background-color: #778899;
+}
+input.data_expirare:focus {
+    background-color: #8899AA;
 }
 
 .required {
     color: #E00;
-}
-
-input:focus {
-    background-color: #F1F2D0;
 }
 
 select {
@@ -286,11 +328,11 @@ select {
     border-radius: 3px;
     box-shadow: 0 0 2px #9999FF;
     margin-right: 23px;
-
     width: 80px;
     height: 22px;
     border: 1px solid #EEE;
 }
+
 
 option {
     padding: 1px 3px 1px 3px;
@@ -303,8 +345,28 @@ option[default] {
     display: none;
 }
 
+textarea {
+    padding: 1px 3px 1px 3px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
+    font-size: 1em;
+    border-radius: 3px;
+    box-shadow: 0 0 2px #99F;
+    /*margin-right: 30px;*/
+    border: 1px solid lightsteelblue;
+    width: 400px;
+    height: 6em;
+    background-color: lightsteelblue;
+
+}
+
+
 .lung {
     width: 250px;
+}
+
+.extralung {
+    width: 400px;
 }
 
 .mediu {
@@ -315,11 +377,13 @@ option[default] {
     width: 150px;
 }
 
-label {
-    display: block;
-    font-weight: 400;
-    font-size: 1.05em;
-    padding-bottom: 3px;
+.extrascurt {
+    width: 100px;
+}
+
+.megascurt {
+    width: 30px;
+    text-align: center;
 }
 
 table {
@@ -329,12 +393,15 @@ table {
     /*border-spacing: 1px;*/
     /*height: 200px;*/
     /*overflow-y: auto;*/
-
 }
 
 td {
     vertical-align: top;
     padding-top: 7px;
+}
+
+form td {
+    padding-right: 30px;
 }
 
 .rezultate td, .rezultate th {
@@ -519,6 +586,10 @@ td {
     color: #000;
     background-color: lavender;
     line-height: 1.05;
+}
+
+.nou {
+    margin-left: 30px;
 }
 
 /*.newfromselect {*/
