--- a/css/styles.css
+++ b/css/styles.css
@@ -563,10 +563,13 @@ form td {
     margin: 0;
     padding: 5px;
     color: #000000;
-    background-color: #ffffff;
+    /*background-color: #ffffff;*/
     font-family: 'Roboto Condensed', sans-serif;
     line-height: 1.1;
     cursor: default;
+}
+.rec.selected {
+    background-color: #CED5F5;
 }
 
 #source {
