--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,19 @@
     box-sizing: border-box;
 }
 
+::-webkit-input-placeholder { /* WebKit browsers */
+    color:    #555;
+}
+/*:-moz-placeholder { *//* Mozilla Firefox 4 to 18 */
+    /*color:    #777;*/
+/*}*/
+/*::-moz-placeholder { *//* Mozilla Firefox 19+ */
+    /*color:    #777;*/
+/*}*/
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color:    #555;
+}
+
 li, header, footer {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -146,7 +159,7 @@ a.submit {
     box-shadow: 0 0 0 0 #488FE0;
     padding: 0 10px;
     margin-right: 10px;
-    border-radius: 5px;
+    border-radius: 2px;
 }
 
 a.submit:hover {
@@ -280,8 +293,7 @@ input[type="text"] {
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 700;
     font-size: 1em;
-    border-radius: 3px;
-    /*margin-right: 30px;*/
+    border-radius: 2px;
     box-shadow: 0 0 2px #99F;
 
 }
@@ -297,7 +309,8 @@ input.normal:focus {
 .valoare_oferta {
     border: 1px solid darkseagreen;
     background-color: darkseagreen;
-    font-size: 1.2em !important;
+    font-size: 1.6em !important;
+    /*font-family: 'Lucida Grande' !important;*/
 }
 
 input.valoare_oferta:focus {
@@ -320,7 +333,7 @@ select {
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 700;
     font-size: 1em;
-    border-radius: 3px;
+    border-radius: 2px;
     box-shadow: 0 0 2px #9999FF;
     margin-right: 23px;
     width: 80px;
@@ -344,7 +357,7 @@ textarea {
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 400;
     font-size: 1em;
-    border-radius: 3px;
+    border-radius: 2px;
     box-shadow: 0 0 2px #99F;
     /*margin-right: 30px;*/
     border: 1px solid lightsteelblue;
@@ -539,7 +552,7 @@ form td {
     display: none;
     border: 1px solid #eee;
     background-color: #fff;
-    border-radius: 3px;
+    border-radius: 2px;
     box-shadow: 1px 1px 2px #777;
     /*overflow: hidden;*/
     -webkit-touch-callout: none;
