inainte de modificare peste tot .tabel

--- a/css/styles.css
+++ b/css/styles.css
@@ -427,7 +427,7 @@ form td {
 }
 
 .rezultate th {
-    background-color: #600000; /* culoare cap tabel */
+    background-color: #600000;
     color: #FFD5D5;
     font-weight: 400;
     font-size: 1.1em;
