--- a/css/styles.css
+++ b/css/styles.css
@@ -282,21 +282,27 @@ label {
     font-weight: 400;
     font-size: 1em;
     padding-bottom: 3px;
+    /*padding-left: 5px;*/
 }
 
-.normal {
-    border: 1px solid #eee;
+input.normal {
+    border: 1px solid #666;
+    background-color: #666;
+    box-shadow: 0 0 2px #666;
     padding: 1px 3px 1px 3px;
     font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 1em;
-    border-radius: 2px;
-    box-shadow: 0 0 2px #99F;
+    border-radius: 3px;
+    color: #fff;
 }
 
 input.normal:focus {
     background-color: #F1F2D0;
-    box-shadow: 0 0 10px #000;
+    border: 1px solid #F1F2D0;
+    box-shadow: 0 0 5px #000;
+    color: #000;
+
 }
 
 .valoare_oferta {
