--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,7 @@ input.normal {
     font-weight: 400;
     font-size: 1em;
     border-radius: 3px;
-    color: #fff;
+    color: palegreen;
 }
 
 input.normal:focus {
@@ -341,7 +341,6 @@ textarea {
     font-weight: 400;
     font-size: 1em;
     border-radius: 2px;
-        /*margin-right: 30px;*/
     width: 350px;
     max-width: 350px;
     min-width: 350px;
@@ -361,16 +360,21 @@ textarea:focus {
 }
 
 select {
-    padding: 1px 3px;
+
+    border: 1px solid #666;
+    background-color: #666;
+    box-shadow: 0 0 2px #666;
+    color: #FFF;
+    padding: 0 3px;
     font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 1em;
-    border-radius: 2px;
-    box-shadow: 0 0 2px #9999FF;
+    border-radius: 3px;
+    /*box-shadow: 0 0 2px #9999FF;*/
     margin-right: 23px;
     width: 80px;
     height: 22px;
-    border: 1px solid #EEE;
+    /*border: 1px solid #EEE;*/
 }
 
 option {
@@ -378,11 +382,12 @@ option {
     color: #000;
     font-weight: 400;
     text-align: left;
+    background-color: #FFF;
 }
 
-option[default] {
-    display: none;
-}
+/*option[default] {*/
+    /*display: none;*/
+/*}*/
 
 .lung {
     width: 350px;
