--- a/css/styles.css
+++ b/css/styles.css
@@ -334,7 +334,7 @@ option {
 table {
     /*display: block;*/
     /*margin-bottom:      20px;*/
-    border-collapse: collapse;
+    /*border-collapse: collapse;*/
     /*border-spacing: 1px;*/
     /*height: 200px;*/
     /*overflow-y: auto;*/
@@ -346,7 +346,6 @@ input.required {
 }
 table.rezultate {
     margin-top: 10px;
-    min-width:  800px;
 }
 table.rezultate td, .rezultate th {
     padding:    1px 5px;
