--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,9 @@ table {
 input.required {
     /*color: rgb(255, 68, 68);*/
     background-color: rgba(255, 68, 68, 0.5);
-    border:           hidden;
+    border:           1px solid rgba(255, 68, 68, 0.8);
+    box-shadow:       0 0 2px 0 rgba(255, 68, 68, 0.5);
+    /*border:           hidden;*/
 }
 table.rezultate {
     margin-top: 10px;
